myteo/test/analyze/type_check/recursive_aliases_error/single_file.myte
module Test

type alias rec_type1 = rec_type2
type alias rec_type2 = rec_type1

type alias rec_type3 = rec_type4 => unit
type alias rec_type4 = rec_type3

type alias rec_type5 = (unit, rec_type6) => unit
type alias rec_type6 = (unit, rec_type7) => unit
type alias rec_type7 = (unit, rec_type5) => unit

fun main() {}